<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">P2P Communication</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="empty"></string>
    <string name="p2p_on_off">P2P On/Off</string>
    <string name="p2p_enabled">P2P enabled</string>
    <string name="p2p_disabled">P2P disabled</string>
    <string name="p2p_disabled_please_activate">P2P is disabled, please enable from system settings</string>
    <string name="p2p_unsupported">Device does not support P2P</string>
    <string name="connect">Connect</string>
    <string name="connected">Connected</string>
    <string name="connected_to_p2p_network">Connected to a P2P network</string>
    <string name="connect_failed">Connect failed</string>
    <string name="disconnect">Disconnect</string>
    <string name="disconnected">Disconnected</string>
    <string name="disconnected_from_p2p_network">Disconnected from a P2P network</string>
    <string name="disconnect_failed">Disconnect failed</string>
    <string name="discover">Discover</string>
    <string name="discovery_initiated">Discovery initiated</string>
    <string name="discovery_failed">Discovery failed</string>
    <string name="discovered_devices_list_cleared">Discovered devices list cleared</string>
    <string name="multicast_chat_capital_letters">MULTICAST CHAT</string>
    <string name="send_multicast">Send multicast</string>
    <string name="stopped_listening_for_multicast_messages">Stopped listening for multicast messages</string>
    <string name="started_listening_for_multicast_messages">Started listening for multicast messages</string>
    <string name="message_not_multicasted">Message not multicasted</string>
    <string name="busy">Busy</string>
    <string name="internal_error">Internal error</string>
    <string name="unknown_error">Unknown error</string>
    <string name="failed">Failed</string>
    <string name="no_devices_found">No devices found</string>
    <string name="unknown">Unknown</string>
    <string name="number_of_available_p2p_peers_changed">Number of available P2P peers has changed</string>
    <string name="details_about_this_device_updated">Details about this device has been updated</string>
    <string name="peer_status">Peer status</string>
    <string name="available">Available</string>
    <string name="unavailable">Unavailable</string>
    <string name="invited">Invited</string>
    <string name="available_devices_capital_letters">AVAILABLE DEVICES</string>
    <string name="me_capital_letters">ME</string>
    <string name="searching_dots">Searching...</string>
    <string name="invitation_sent">Invitation sent</string>
    <string name="am_i_group_owner_question">Am I group owner?</string>
    <string name="group_owner_ip">Group owner IP</string>
    <string name="send">Send</string>
    <string name="tap_to_connect">Tap to connect</string>
    <string name="am_i_host_question">Am I host?</string>
    <string name="received">Received</string>
    <string name="from">from</string>
    <string name="colon">:</string>
    <string name="multi_connect">Multi-connect</string>
    <string name="scan">Scan</string>
    <string name="stop">Stop</string>
    <string name="this_device_is_not_group_owner">This device is not the group owner</string>
    <string name="host">Host</string>
    <string name="space" />
    <string name="my_ip">MyIP</string>
    <string name="ip_capital_letters">IP</string>
    <string name="wifi_p2p_disabled_please_activate">Wifi P2P is disabled, please activate from system settings</string>
    <string name="create_group">Create group</string>
    <string name="data_has_been_reset">Data has been reset</string>
    <string name="peers_requested">Peers requested</string>
    <string name="is_connected">Is connected</string>
    <string name="is_disconnected">Is disconnected</string>
    <string name="this_device_changed">This device changed</string>
    <string name="successfully_sent_invitation_to_connect">Successfully sent invitation to connect</string>
    <string name="could_not_send_invitation_to_connect">Could not send invitation to connect</string>
    <string name="successfully_created_group">Successfully created group</string>
    <string name="could_not_create_group">Could not create group</string>
    <string name="successfully_disconnected">Successfully disconnected</string>
    <string name="could_not_disconnect">Could not disconnect</string>
    <string name="successfully_started_discovery">Successfully started discovery</string>
    <string name="could_not_start_discovery">Could not start discovery</string>
    <string name="successfully_stopped_discovery">Successfully stopped discovery</string>
    <string name="could_not_stop_discovery">Could not stop discovery</string>
    <string name="successfully_cancelled_connection">Successfully cancelled connection</string>
    <string name="could_not_cancel_connection">Could not cancel connection</string>
    <string name="cancel_invitation">Cancel invitation</string>
    <string name="multicast_receiver_service_stopped">Multicast receiver service stopped</string>
    <string name="multicast_receiver_service_started">Multicast receiver service started</string>

</resources>
