<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".P2PCommunicationActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:gravity="center_vertical"
            android:text="@string/available_devices_capital_letters"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent">

            <LinearLayout
                android:id="@+id/search_layout"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentRight="true"
                android:orientation="horizontal"
                android:visibility="gone">

                <ProgressBar
                    android:id="@+id/discover_devices_progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    style="?android:attr/progressBarStyle"></ProgressBar>

                <TextView
                    android:id="@+id/discover_devices_search_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_alignParentLeft="true"
                    android:text="@string/searching_dots" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:gravity="center_vertical"
            android:background="@android:color/holo_blue_light" />

        <TextView
            android:id="@+id/no_devices_found_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/no_devices_found" />

        <ListView
            android:id="@android:id/list"
            android:layout_height="0dip"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:clickable="true" />

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/left_bottom_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/right_bottom_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"/>
        </LinearLayout>


    </LinearLayout>


</LinearLayout>